--- a/canvas.html
+++ b/canvas.html
@@ -22,6 +22,7 @@ canvas{
 	White ball generation interval: <input type="text" id="generationInterval" value="5"><br>
 	Balls speed: <input type="text" id="ballsSpeed" value="10"><br>
 	Prizes: <input type="text" id="prizes" value="1"><br>
+	Countdown: <input type="text" id="countdown" value="10"><br>
 	<input type="checkbox" id="isSeeded">Game with seed<br>
 	<div id="seedOptions" style="display:none;" >
 		Seed:   <input type="text" id="seed"><br>
