Speed control and experimenting with url

--- a/canvas.html
+++ b/canvas.html
@@ -108,6 +108,8 @@ Josphine Mattson</textarea><br>
 	<br>
 	Space: pause
 	<br>
+	left/right: control speed
+	<br>
 	Esc: exit
 </p>
 	<span id="loading">Loading resouces...</span>	
