--- a/index.html
+++ b/index.html
@@ -1,19 +1,118 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <script type="text/javascript" src="js/crafty.js"></script>
-    <script type="text/javascript" src="js/scenes.js"></script>
-    <script type="text/javascript" src="js/game.js"></script>
-    <title>Ultimate Jackpot</title>
-    <style type="text/css">
-    	body, html { margin:0; padding: 0; overflow:hidden; font-family:Arial; font-size:20px; }
-   	 	body {background-color:#a1a1a1 }
-    	#cr-stage { border:0px solid black; margin:5px auto; color:white; background-color:#FFFFFF }
-    </style>
+<style>
+html, body {
+  width:  100%;
+  height: 100%;
+  margin: 0px;
+} 
+canvas{
+	background-image:url("images/canvas/cream_pixels.png");/* from subtlepatterns.com */
+	padding: 0px;
+	margin: 0px;	
+}
+</style>
 </head>
 <body>
-<div id="cr-stage"></div>
+	
+	<canvas id="game-canvas" width="1024" height="768" style="display:none;" >
+		Your browser does not support the HTML5 canvas tag.
+	</canvas>
+<div id="config">
+	White ball generation interval: <input type="text" id="generationInterval" value="5"><br>
+	Balls speed: <input type="text" id="ballsSpeed" value="10"><br>
+	Prizes: <input type="text" id="prizes" value="1"><br>
+	Countdown: <input type="text" id="countdown" value="10"><br>
+	Players:<br><textarea id="runners" rows="50" cols="50">Adriano
+Antonio
+Arbo
+Caimi
+Christiano
+Cristina
+Douglas
+Flavio
+Gabriel
+Garanhani
+Grazi
+Guilherme
+Igor
+Lau
+Leonardo
+Lucas Fogaca
+Lucas Santos
+Marcia
+Matias
+Nodari
+Olavo
+Melodee Hollenbeck
+Yen Landi
+Chae Luttrell
+Sharan Barrier
+Yukiko Hepburn
+Shana Pike
+Pinkie Birchard
+Cherilyn Horning
+Yasmine Ballas
+Evie Pinson
+Helaine Carberry
+Deja Cava
+Mariella Mechem
+Farah Rummel
+Becki Fusco
+Elena Chaney
+Lucile Gallego
+Shirl Reese
+Ruth Basye
+Jacelyn Kraatz
+Minta Wilmes
+Corey Soles
+Vita Hayne
+Trang Forry
+Monroe Dyches
+Juana Zwick
+Ricky Gin
+Olive Ruland
+Meredith Spenser
+Jacqui Gobeil
+Oren Tomasi
+Princess Champagne
+Lucas Vinyard
+Cathie Ferrante
+Rosendo Maul
+Collette Helgeson
+Filomena Oliva
+Ranee Gurr
+Jennefer Taketa
+Shawanna Pye
+Meri Haring
+Dayle Staten
+Tyson Gatson
+Dani Huckleberry
+Lurlene Ota
+Ludivina Boddie
+Veronique Hawkinson
+Ayanna Keala
+Breana Fortney
+Josphine Mattson</textarea><br>
+<p>	Before pressing play use f11 to go fullscreen
+	<br>
+	Commands:
+	<br>
+	Enter: add ball
+	<br>
+	Space: pause
+	<br>
+	left/right: control speed
+	<br>
+	Esc: exit
+</p>
+	<span id="loading">Loading resouces...</span>	
+	<a><img src="images/canvas/play.png" id="playButton"></a>
+</div>
+	<script type="text/javascript" src="js/canvas/Resources.js"></script>
+	<script type="text/javascript" src="js/canvas/BallFactory.js"></script>
+	<script type="text/javascript" src="js/canvas/seedrandom.js"></script>
+	<script type="text/javascript" src="js/canvas/Controller.js"></script>
+	<script type="text/javascript" src="js/canvas/jackpot.js"></script>
 </body>
 </html>
