Fixing winner screen for more than one winner

--- a/index.html
+++ b/index.html
@@ -22,85 +22,18 @@ canvas{
 
 <div id="config">
 	<span class="row">White ball generation interval:</span> 
-	<input type="text" id="generationInterval" value="1">
+	<input type="text" id="generationInterval" value="5">
 	<span class="row">Balls speed:</span>
 	<input type="text" id="ballsSpeed" value="5">
 	<span class="row">Prizes:</span>
 	<input type="text" id="prizes" value="1">
 	<span class="row">Countdown:</span>
-	<input type="text" id="countdown" value="5">
+	<input type="text" id="countdown" value="10">
 	<span class="row">Players:</span>
-	<textarea id="runners" rows="10" cols="50">Adriano
-Antonio
-Arbo
-Caimi
-Christiano
-Cristina
-Douglas
-Flavio
-Gabriel
-Garanhani
-Grazi
-Guilherme
-Igor
-Lau
-Leonardo
-Lucas Fogaca
-Lucas Santos
-Marcia
-Matias
-Nodari
-Olavo
-Melodee Hollenbeck
-Yen Landi
-Chae Luttrell
-Sharan Barrier
-Yukiko Hepburn
-Shana Pike
-Pinkie Birchard
-Cherilyn Horning
-Yasmine Ballas
-Evie Pinson
-Helaine Carberry
-Deja Cava
-Mariella Mechem
-Farah Rummel
-Becki Fusco
-Elena Chaney
-Lucile Gallego
-Shirl Reese
-Ruth Basye
-Jacelyn Kraatz
-Minta Wilmes
-Corey Soles
-Vita Hayne
-Trang Forry
-Monroe Dyches
-Juana Zwick
-Ricky Gin
-Olive Ruland
-Meredith Spenser
-Jacqui Gobeil
-Oren Tomasi
-Princess Champagne
-Lucas Vinyard
-Cathie Ferrante
-Rosendo Maul
-Collette Helgeson
-Filomena Oliva
-Ranee Gurr
-Jennefer Taketa
-Shawanna Pye
-Meri Haring
-Dayle Staten
-Tyson Gatson
-Dani Huckleberry
-Lurlene Ota
-Ludivina Boddie
-Veronique Hawkinson
-Ayanna Keala
-Breana Fortney
-Josphine Mattson</textarea>
+	<textarea id="runners" rows="10" cols="50">Player
+names
+goes 
+here</textarea>
 	<div id="instructions">
 		<span class="row">Before pressing play use f11 to go fullscreen</span>
 		<span class="row">Commands:</span>
