torwards simple reprocible by url

--- a/index.html
+++ b/index.html
@@ -21,23 +21,18 @@ canvas{
 	</canvas>
 
 <div id="config">
-	<span class="row">White ball generation interval:</span> 
-	<input type="text" id="generationInterval" value="5">
-	<span class="row">Balls speed:</span>
-	<input type="text" id="ballsSpeed" value="5">
 	<span class="row">Prizes:</span>
 	<input type="text" id="prizes" value="1">
 	<span class="row">Countdown:</span>
 	<input type="text" id="countdown" value="10">
 	<span class="row">Players:</span>
-	<textarea id="runners" rows="10" cols="50">Player
-names
-goes 
-here</textarea>
+	<textarea id="runners" rows="10" cols="50">Alice
+Bob
+Carol 
+Dan</textarea>
 	<div id="instructions">
 		<span class="row">Before pressing play use f11 to go fullscreen</span>
 		<span class="row">Commands:</span>
-		<span class="row">Enter: add ball</span>
 		<span class="row">Space: pause</span>
 		<span class="row">left/right: control speed</span>
 		<span class="row">Esc: exit</span>
