--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@ html, body {
   width:  100%;
   height: 100%;
   margin: 0px;
-} 
+  background-color: dimgrey;
+}
+
+#canvas-container{
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+    justify-content: center;
+}
+
 canvas{
 	background-image:url("images/canvas/cream_pixels.png");/* from subtlepatterns.com */
 	padding: 0px;
@@ -15,10 +25,12 @@ canvas{
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	
-	<canvas id="game-canvas" width="1024" height="768" style="display:none;" >
-		Your browser does not support the HTML5 canvas tag.
-	</canvas>
+
+	<div id="canvas-container" style="display:none;">
+    <canvas id="game-canvas" width="1200" height="900" style="border: solid;" >
+        Your browser does not support the HTML5 canvas tag.
+    </canvas>
+  </div>
 
 <div id="config">
 	<span class="row">Prizes:</span>
@@ -28,10 +40,9 @@ canvas{
 	<span class="row">Players:</span>
 	<textarea id="runners" rows="10" cols="50">Alice
 Bob
-Carol 
+Carol
 Dan</textarea>
 	<div id="instructions">
-		<span class="row">Before pressing play use f11 to go fullscreen</span>
 		<span class="row">Commands:</span>
 		<span class="row">Space: pause</span>
 		<span class="row">left/right: control speed</span>
